--- a/frontend/website-client/src/components/oneyou/shelves/share-button-shelf.scss
+++ b/frontend/website-client/src/components/oneyou/shelves/share-button-shelf.scss
@@ -1,4 +1,5 @@
-.share-button-shelf--align-right {
+.share-button-shelf--align-right .container {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
 }
